--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^18.2.0",
     "react-code-input": "^3.10.1",
     "react-dom": "^18.2.0",
+    "react-input-pin-code": "^1.2.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
